[gd_scene load_steps=21 format=3 uid="uid://ddo6sd23dsf5r"]

[ext_resource type="Script" path="res://entities/actors/actor.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bbfb4k27hypgp" path="res://components/smooth_pivot/smooth_pivot.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://bu0hcyfd0hr5u" path="res://components/repulsive_area/repulsive_area.tscn" id="3"]
[ext_resource type="Script" path="res://components/state_machine/state_machine.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://bx4c2kyjut4ry" path="res://resources/textures/entities/actors/shadow.png" id="5"]
[ext_resource type="Script" path="res://entities/actors/states/pathing_state.gd" id="6"]
[ext_resource type="PackedScene" uid="uid://ch43ke17snyyk" path="res://components/state_label/state_label.tscn" id="7"]
[ext_resource type="Texture2D" uid="uid://cibt4by7ui1sc" path="res://resources/textures/entities/actors/actor.png" id="8"]
[ext_resource type="Animation" uid="uid://d1ggl4iyrts2" path="res://resources/animations/entities/actors/idle_right.tres" id="9"]
[ext_resource type="Animation" uid="uid://d0nj4tdy87oat" path="res://resources/animations/entities/actors/idle_down.tres" id="10"]
[ext_resource type="Animation" uid="uid://db25ex3167hj4" path="res://resources/animations/entities/actors/idle_left.tres" id="11"]
[ext_resource type="Animation" uid="uid://cj1q388dnbnqr" path="res://resources/animations/entities/actors/idle_up.tres" id="12"]
[ext_resource type="Animation" uid="uid://bm8g40uw17gw6" path="res://resources/animations/entities/actors/run_down.tres" id="13"]
[ext_resource type="Animation" uid="uid://bgq35an1ldwjq" path="res://resources/animations/entities/actors/run_up.tres" id="14"]
[ext_resource type="Animation" uid="uid://dewqi3ge6vrhm" path="res://resources/animations/entities/actors/run_left.tres" id="15"]
[ext_resource type="Animation" uid="uid://cdffk80e3ktrp" path="res://resources/animations/entities/actors/run_right.tres" id="16"]
[ext_resource type="PackedScene" uid="uid://coh48e5qw4ou5" path="res://components/radar_point/radar_point.tscn" id="17"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rnw1h"]
_data = {
"idle_down": ExtResource("10"),
"idle_left": ExtResource("11"),
"idle_right": ExtResource("9"),
"idle_up": ExtResource("12"),
"run_down": ExtResource("13"),
"run_left": ExtResource("15"),
"run_right": ExtResource("16"),
"run_up": ExtResource("14")
}

[sub_resource type="CircleShape2D" id="1"]

[sub_resource type="CircleShape2D" id="2"]
radius = 12.0

[node name="Actor" type="CharacterBody2D" node_paths=PackedStringArray("_navigating_state") groups=["actors"]]
collision_layer = 0
script = ExtResource("1")
_navigating_state = NodePath("StateMachine/Pathing")
metadata/_edit_group_ = true

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("_state")]
script = ExtResource("4")
_state = NodePath("Pathing")

[node name="Pathing" type="Node" parent="StateMachine" node_paths=PackedStringArray("_actor")]
script = ExtResource("6")
_actor = NodePath("../..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle_down"
libraries = {
"": SubResource("AnimationLibrary_rnw1h")
}

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="RepulsiveArea" parent="." instance=ExtResource("3")]

[node name="RepulsiveShape" type="CollisionShape2D" parent="RepulsiveArea"]
shape = SubResource("2")

[node name="RadarPoint" parent="." instance=ExtResource("17")]

[node name="Shadow" type="Sprite2D" parent="."]
texture = ExtResource("5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("8")
offset = Vector2(0, -32)
hframes = 6
vframes = 4
frame = 6

[node name="SmoothPivot" parent="." instance=ExtResource("2")]

[node name="CameraAnchor" type="Marker2D" parent="SmoothPivot"]
position = Vector2(32, 0)

[node name="StateLabel" parent="." node_paths=PackedStringArray("_state_machine") instance=ExtResource("7")]
_state_machine = NodePath("../StateMachine")
